Fix <code> color in dark mode

--- a/client/bootstrap.scss
+++ b/client/bootstrap.scss
@@ -188,6 +188,7 @@ $breadcrumb-active-color: $gray-700;
 $close-color:       $white;
 $close-text-shadow: none;
 
+$code-color: #6ed6e4; // brighter version of $cyan
 $pre-color: inherit;
 
 @import "{}/node_modules/bootstrap/scss/variables";
